# microservice_template

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  database.db  pyproject.toml
microservice_template/: main.py
microservice_template/aio_pika/: consumer.py  producer.py
microservice_template/config/: db_config.py
microservice_template/db/: db.py
microservice_template/db/db_sqlalchemy/: db_sqlalchemy.py
microservice_template/message/: receive_messages.py
microservice_template/models/: note.py
microservice_template/schemas/: note.py
tests/: conftest.py  test.env  test_database.db
tests/integration_tests/test_db/: test_db.py
tests/integration_tests/test_db/test_db_sqlalchemy/: test_db_sqlalchemy.py
tests/model_tests/: conftest.py  test_note_model.py
tests/test_db/test_db_sqlalchemy/: test_db_sqlalchemy.py
tests/unit_tests/test_db/: test_db.py
tests/unit_tests/test_db/test_db_sqlalchemy_unit/: test_db_sqlalchemy_unit.py
