[tool.poetry]
name = "microservice-template"
version = "0.1.0"
description = ""
authors = ["Greg McCarthy <6regmcc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlalchemy = "^2.0.38"
pytest = "^8.3.4"
pytest-env = "^1.1.5"
psycopg = {extras = ["binary", "pool"], version = "^3.2.4"}
pytest-mock = "^3.14.0"
aio-pika = "^9.5.4"
pytest-asyncio = "^0.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "ENVIRONMENT=TEST",
    "DATABASE_URL=postgresql+psycopg://postgres:postgres@localhost:5456/postgres",
    "RABBITMQ_URL=localhost:5672"

]